// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisplayChip > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0"
  />
</DocumentFragment>
`;

exports[`LinkChip > should match a snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1"
  />
</DocumentFragment>
`;
